# cs-439-project

./: .gitignore  README.md  pyproject.toml  run.py  validate_math.py  validate_reference.py
configs/: README.md  adamw.yaml  base.yaml  dynmuon.yaml  gpt124m.yaml  homogeneous_muon.yaml  inverted_spectrum.yaml  kaon.yaml  muon.yaml  muon_svd.yaml  random_spectrum.yaml  relmuon.yaml  relmuon_attention.yaml  relmuon_complete.yaml  relmuon_log1p.yaml  relmuon_log1p_matched.yaml  relmuon_log1p_wd.yaml  relmuon_rms.yaml  relmuon_rms_wd.yaml  route.yaml  route_decoupled.yaml  route_log1p.yaml  route_raw_uncapped.yaml  route_zscore_uncapped.yaml  small.yaml
data/: README.md  prepare_fineweb.py  prepare_wikitext.py
experiments/: README.md  baselines_step_efficiency.py  cost_table.py  depth_routing.py  lr_bowl.py  probe_proxies.py  pull_wandb.py  report_figures.py  spatial_ablation.py
scripts/: README.md  container_entry.sh  run_job.sh  sweeps.sh  sync_to_rcp.sh
src/: README.md  __init__.py  analysis.py  cli.py  config.py  trainer.py
src/data/: README.md  __init__.py  cached_tokens.py
src/models/: README.md  gpt.py
src/optimizers/: README.md  __init__.py  dynmuon.py  homogeneous_muon.py  kaon.py  muon.py  param_groups.py  registry.py  relmuon.py
